# VariantStructure

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
dunbrack-rotamer/original/ExtendedOpt3-5/: Description.txt
example/: example-hras.py  example-kinase.py
protein_rebuilder/: __init__.py  ccd_loop_builder.py  cli.py  fixer_and_minimizer.py  io_helpers.py  rotamer_lib.py  rotamer_loader.py  rotamer_sampler.py  sequence_aligner.py  structure_modifier.py
scripts/: fetch_dunbrack.py
src/protein_rebuilder/: fixer_and_minimizer.py  rotamer_lib.py  rotamer_loader.py  rotamer_sampler.py
src/protein_rebuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test-hras.py  test_basic.py  test_ccd_loop_builder.py  test_fixer_and_minimizer.py  test_io_helpers.py  test_rotamer_lib.py  test_rotamer_loader.py  test_rotamer_sampler.py  test_sequence_aligner.py  test_structure_modifier.py
