[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-rebuilder"
version = "0.1.0"
description = "A small, self-contained Python package that uses PDBFixer to rebuild missing atoms/sidechains and OpenMM to minimize the structure for a new sequence and a reference structure."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython",
    "numpy",
    "pdbfixer @ git+https://github.com/openmm/pdbfixer.git",
    "openmm",
]

[project.urls]
Homepage = "https://github.com/example/protein-rebuilder"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["protein_rebuilder"]

[project.scripts]
protein-rebuilder = "protein_rebuilder.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint",
    "mypy",
    "deptry",
    "pytest"
]
